[package]
name = "av-mp4"
version = "0.1.0"
authors = ["Felix Kaaman <tmtu@tmtu.ee>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
av-data = "0.3"
av-format = "0.3"

byteorder = "1.4"
bitflags = "1.2"
bytemuck = "1.5"
thiserror = "1.0"
log = "0.4"

mpeg1 = { path = "../mpeg1" }

[dev-dependencies]
pretty_env_logger = "0.4"

[patch.crates-io]
av-codec = { path = "../rust-av/codec" }
av-data = { path = "../rust-av/data" }
av-format = { path = "../rust-av/format" } #git = "https://github.com/rust-av/rust-av" }
av-bitstream = { path = "../rust-av/bitstream" } #git = "https://github.com/rust-av/rust-av" }


